config/network-policy/networkpolicy-build-and-sign.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: networkpolicy-build-and-sign
  namespace: system
spec:
  podSelector:
    matchExpressions:
    - key: openshift.io/build.name
      operator: Exists
  policyTypes:
    - Egress
  egress:
  - {}
