config/network-policy/networkpolicy-default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
 name: networkpolicy-default-deny
 namespace: system
spec:
 podSelector: {}
 policyTypes:
 - Ingress
 - Egress
