config/network-policy/networkpolicy-webhook.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: networkpolicy-webhook
  namespace: system
spec:
  podSelector:
    matchLabels:
      control-plane: webhook-server
  policyTypes:
  - Egress
  - Ingress
  ingress:
  - ports:
    - protocol: TCP
      port: 9443
  egress:
  - ports: # kube api server port
    - protocol: TCP
      port: 6443
    - protocol: TCP
      port: 443
